--- a/src/LikeAFoxAspNg.Web/ClientApp/src/app/account/+register/+confirmation/register-confirmation.component.html
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/app/account/+register/+confirmation/register-confirmation.component.html
@@ -9,4 +9,4 @@
     <p *ngIf="emailConfirmed">
         Thank you for confirming your email, please <a routerLink="../../login">Login</a> now.
     </p>
-</div>#
+</div>
