--- a/src/LikeAFoxAspNg.Web/ClientApp/src/app/core/components/footer/footer.component.html
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/app/core/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer text-muted">
     <p class="text-muted">
-        &copy; 2018 {{'app_title' | translate}}
+        &copy; 2018 Like A Fox Development
     </p>
 </footer>
