--- a/src/LikeAFoxAspNg.Web/ClientApp/src/app/+signalr/chat/chat.component.scss
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/app/+signalr/chat/chat.component.scss
@@ -53,6 +53,7 @@ opacity: 1;
 .send-chat:hover {
     background: #606c76;
     color: #313b47;
+    cursor: pointer;
 }
 .chat-display {
     position: fixed;
