--- a/src/LikeAFoxAspNg.Web/ClientApp/src/app/account/+login/login.component.scss
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/app/account/+login/login.component.scss
@@ -1,4 +1,9 @@
-
+@import url('https://fonts.googleapis.com/css?family=Abel');
+@import "../../../styles/index.scss";
+* {
+    text-transform: capitalize;
+    font-family: 'Abel', sans-serif;
+}
             .separator {
                 font-size: 15px;
                 font-weight: 600;
@@ -45,15 +50,20 @@
                 background: #a68080; 
                 color: #313b47;
                 text-align: left;
+                padding: 0 1vw;
+                z-index: 1;
+                
             }
            
-            .login-form input[type='text'] {
+            .login-form input[type='email'], input[type='password'] {
                 border: none;
                 color: #313b47;
+                background: #d1d1d1;
+                width: 31vw;
             }
             .login-form h2 {
                 display: block;
-                width: 33vw;
+                width: 31vw;
                 border-bottom: solid .3vw #313b47;
                 color: #313b47;
                 float: left;
@@ -70,6 +80,50 @@
                 top: 5vw;
                 width: 100vw;
                 background: #d1d1d1;
+            }
+            button.password-reset {
+                background: #313b47;
+                color:#d1d1d1;;
+                border: none;
+                font-size: 1.3vw;
+                outline: none;
+                text-align:center;
+                height:4vw;
+                line-height:4vw;
+                width: 16.5vw;
+                padding: 0;
+                align-items: unset;
+                margin: 0;
+                position: fixed;
+                bottom: 0;
+                left: 16.5vw;
+            
+            }
+            button.password-reset:hover {
+                background: #d1d1d1;;
+                color: #313b47;
+            }
+            appc-dynamic-form button {
+                background: #313b47;
+                color:#d1d1d1;;
+                border: none;
+                font-size: 1.4vw;
+                outline: none;
+                text-align:center;
+                height:4vw;
+                line-height:4vw;
+                width: 16.5vw;
+                padding: 0;
+                align-items: unset;
+                margin: 0;
+                position: fixed;
+                bottom: 0;
+                left: 0;
+            
+            }
+            appc-dynamic-form button:hover {
+                background: #d1d1d1;;
+                color: #313b47;
             }
             
            
