--- a/src/LikeAFoxAspNg.Web/ClientApp/src/app/account/+register/+register/register.component.scss
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/app/account/+register/+register/register.component.scss
@@ -1,28 +1,37 @@
+@import url('https://fonts.googleapis.com/css?family=Abel');
 @import "../../../../styles/index.scss";
+* {
+    text-transform: capitalize;
+    font-family: 'Abel', sans-serif;
+}
 .form-container {
     width: 33vw;
     position: fixed;
     bottom: 0;
     right:0;
     top: 5vw;
-    padding: 1vw 1vw;
+    padding: 0 1vw;
     height: 100%;
     background: #c0c8d1; 
     color: #313b47;
     text-align: right;
+    z-index: 1;
 }
 .form-container button {
     color: #a68080;
     background: #313b47;
     border: none;
-    height: 3vw;
+    height: 4vw;
     border: none;
-    line-height: 3vw;
-    width: 15vw;
+    font-size: 1.3vw;
+    line-height: 4vw;
+    width: 33vw;
     text-align: center;
     position: fixed;
-    bottom: 2vw;
-    right: 1vw;
+    padding:0;
+    bottom: 0;
+    right: 0;
+   
     }
 .form-container button:hover {
 background: #a68080;
