--- a/src/LikeAFoxAspNg.Web/ClientApp/src/app/shared/components/sub-menu/sub-menu.component.scss
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/app/shared/components/sub-menu/sub-menu.component.scss
@@ -20,8 +20,9 @@ ul {
     text-align: center;
     color: #313b47;
     margin-right:1vw;
+    margin-top: 1vw;
     width: 12vw;
-
+    background: #c0c8d1;
 }
 
 .submenu-blocks:hover {
