name changes for ico

--- a/src/LikeAFoxAspNg.Web/ClientApp/src/app/core/components/header/header.component.html
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/app/core/components/header/header.component.html
@@ -2,7 +2,7 @@
 
 <header class="header">
         <a class="logo" routerLink="">
-                <img class="logo" src="/assets/like-a-fox-192x192.png" alt="logo">
+                <img class="logo" src="/assets/favicon-192x192.png" alt="logo">
             </a>
             <button type="button" class="navbar-toggler hidden-sm-up" (click)="navCollapse()"> &#9776; </button>
     <div class="inner">
