--- a/src/LikeAFoxAspNg.Web/ClientApp/src/app/+signalr/move-shape/move-shape.component.html
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/app/+signalr/move-shape/move-shape.component.html
@@ -2,5 +2,5 @@
 <div class="left-signalr">
     <h2 class="block-header">Move shape example</h2>
 
-    <div class="draggable" #draggable><img src="../../../assets/like-a-fox-150x150.png"></div> 
+    <div class="draggable" #draggable><img src="../../../assets/favicon-150x150.png"></div> 
 </div>
