--- a/src/LikeAFoxAspNg.Web/ClientApp/src/app/account/+profile/profile.component.html
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/app/account/+profile/profile.component.html
@@ -1,7 +1,13 @@
-<h1>User profile</h1>
+
+ 
+
+
+<div class="change-info">
+        <h1 class="title-block">User profile</h1>
+        <div class="router-stuff">
+                <router-outlet></router-outlet>
+        </div>
+</div>
+
 
 <appc-sub-menu [menus]="menus"></appc-sub-menu>
-
-<div>
-    <router-outlet></router-outlet>
-</div>
