--- a/src/LikeAFoxAspNg.Web/ClientApp/src/app/shared/components/sub-menu/sub-menu.component.scss
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/app/shared/components/sub-menu/sub-menu.component.scss
@@ -10,6 +10,11 @@ ul {
 .submenu-blocks a {
     color: unset;
     text-decoration-color: unset;
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    line-height: 4vw; 
 }
 .submenu-blocks {
     display:block;
