mobile header styles

--- a/src/LikeAFoxAspNg.Web/ClientApp/src/app/core/components/header/header.component.html
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/app/core/components/header/header.component.html
@@ -4,7 +4,7 @@
         <a class="logo" routerLink="">
                 <img class="logo" src="/assets/favicon-192x192.png" alt="logo">
             </a>
-            <button type="button" class="navbar-toggler hidden-sm-up" (click)="navCollapse()"> &#9776; </button>
+            <button type="button" class="navbar-toggler" (click)="navCollapse()"> &#9776; </button>
     <div class="inner">
                    
                     <a routerLinkActive="active" routerLink="signalr">{{'app_nav_signalr' | translate}}</a>
