--- a/src/LikeAFoxAspNg.Web/ClientApp/src/app/core/components/header/header.component.scss
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/app/core/components/header/header.component.scss
@@ -4,46 +4,89 @@
     text-transform: capitalize;
     font-family: 'Abel', sans-serif;
 }
-.inner {
-    overflow: hidden;
-    background-color: #313b47;
+.header {
+    background-color: $color-primary;
+    position: fixed;
+    z-index: 999;
+    height: 60px;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
-.inner a {
-    color: rgba(255, 255, 255, 0.8);
+.header .inner {
+    box-sizing: border-box;
+    margin: 0 auto;
+    justify-content: unset;
+    float:right;
+}
+
+.header a {
     transition: color 0.15s ease;
     display: inline-block;
     vertical-align: middle;
-    font-weight: 300;
-    letter-spacing: 0.075em;
-    color:#a68080;
-    height: 100%;
-    line-height: 5vw;
-    font-size: 1.3vw;
+    line-height: 60px;
+    color:$color-font;
+    font-size: 18px;
     text-align: center;
-    width: 12vw;
+    width: 100px;
 }
-.inner a:hover {
-    background: #a68080;
-    color:#313b47;
-}
-@media screen and (max-width:860px) {
-    .inner a {
-    height:100%;
-    line-height: 70px;
-    font-size:13px;
-    }
-}
-.navbar-toggler {
-    display:none;
-}
-.inverted-navbar {
-    display:none;
-}
-a.logo {
-    height: 100%;
 
+.header a:hover {
+    color: $color-primary;
+    background: $color-font;
 }
+
+.header a.router-link-active {
+    color: $color-initial;
+}
+
+.header a:nth-child(6) {
+    margin-right: 0;
+}
+
+.header .github {
+    color: $color-initial;
+    font-size: 0.9em;
+    margin: 0;
+    float: right;
+}
+
+div.logo {
+    padding: 10px;
+    width: 100px;
+    height: 60px;
+    float: left;
+    background-image: url('../../../../assets/favicon-192x192.png');
+    background-repeat:no-repeat;
+    background-size: auto 70%;  
+    background-position: center;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+}
+div.logo:hover {
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background-image: url('../../../../assets/favicon-nega-192x192.png');
+    background-color:$color-font;
+}
+div.logo:focus {
+    border: none;
+    outline:none;
+}
+.navbar-toggler, .inverted-navbar {
+    display: none;
+}
+
+
 @media screen and (max-width:680px) {
     .inner a {
         display: none;
@@ -64,23 +107,105 @@ a.logo {
 }
 @media screen and (max-width:680px) {
     .inverted-navbar.isNavbarCollapsed {
-        width: 50vw;
+        width: 100%;
         overflow-x: auto;
         overflow-y: auto;
         position: fixed;
         right:0;
     }
+    div.logo {
+        width: 60px;
+    }
     .navbar-toggler {
         position: absolute;
         right:0;
         top:0;
-        height:100%;
-width: 60px;
+        height:60px;
+        width: 60px;
         margin: 0;
-        font-size: 8vw;
+        font-size: 30px;
         color: #a68080;
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+        -webkit-transition: .5s ease-in-out;
+        -moz-transition: .5s ease-in-out;
+        -o-transition: .5s ease-in-out;
+        transition: .5s ease-in-out;
         cursor: pointer;
     }
+    .navbar-toggler:hover {
+        color: $color-primary;
+        background: $color-font;
+    }
+    .navbar-toggler span {
+        display: block;
+        position: absolute;
+        height: 4px;
+        width: 50%;
+        background: $color-font;
+        border-radius: 9px;
+        opacity: 1;
+        left: 25%;
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+        -webkit-transition: .25s ease-in-out;
+        -moz-transition: .25s ease-in-out;
+        -o-transition: .25s ease-in-out;
+        transition: .25s ease-in-out;
+    }
+    .navbar-toggler:hover span{
+        background:$color-primary;
+    }
+    .navbar-toggler span:nth-child(1) {
+        top: 20px;
+      }
+      
+    .navbar-toggler span:nth-child(2) {
+        top: 30px;
+     }
+      
+    .navbar-toggler span:nth-child(3) {
+        top: 40px;
+    }
+    
+    .navbar-toggler.isNavbarCollapsed span:nth-child(1) {
+        top: 30px;
+        -webkit-transform: rotate(135deg);
+        -moz-transform: rotate(135deg);
+        -o-transform: rotate(135deg);
+        transform: rotate(135deg);
+    }
+    
+    .navbar-toggler.isNavbarCollapsed span:nth-child(2) {
+        opacity: 0;
+        left: -60px;
+    }
+      
+    .navbar-toggler.isNavbarCollapsed span:nth-child(3) {
+        top: 30px;
+        -webkit-transform: rotate(-135deg);
+        -moz-transform: rotate(-135deg);
+        -o-transform: rotate(-135deg);
+        transform: rotate(-135deg);
+    }
+    .inverted-navbar {
+        background: $color-font;
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+        -webkit-transition: .5s ease-in-out;
+        -moz-transition: .5s ease-in-out;
+        -o-transition: .5s ease-in-out;
+        transition: .5s ease-in-out;
+        cursor: pointer;
+        z-index: 999;
+    }
+
     .inverted-navbar.isNavbarCollapsed a {
         float: right;
         display: block;
@@ -91,7 +216,15 @@ width: 60px;
         font-size:18px;
         background: #a68080;
         color:#313b47;
-
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+        -webkit-transition: .5s ease-in-out;
+        -moz-transition: .5s ease-in-out;
+        -o-transition: .5s ease-in-out;
+        transition: .5s ease-in-out;
+        cursor: pointer;
     }
     .inverted-navbar.isNavbarCollapsed a:hover {
         color:#a68080;
