--- a/src/LikeAFoxAspNg.Web/ClientApp/src/styles/_Base.scss
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/styles/_Base.scss
@@ -18,7 +18,7 @@ html {
 body {
     color: $color-secondary;
     font-family: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-    font-size: 1.1vw; 
+    font-size: 16px; 
     font-weight: 300;
     letter-spacing: .01em;
     line-height: 2.7vw;
