--- a/src/LikeAFoxAspNg.Web/ClientApp/src/styles/_Grid.scss
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/styles/_Grid.scss
@@ -17,7 +17,8 @@
 .row {
     display: flex;
     flex-direction: column;
-    padding: 0;
+    padding: 20px 0;
+    margin: 0 auto;
     width: 100%;
     &.row-no-padding {
         padding: 0;
@@ -154,8 +155,4 @@
         }
     }
 }
-@media (max-width:680px) {
-    .row {
-        padding-top: 50px;
-    }
-}
+
