--- a/src/LikeAFoxAspNg.Web/ClientApp/src/styles/_Typography.scss
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/styles/_Typography.scss
@@ -15,41 +15,40 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight: 300;
     letter-spacing: -.1rem;
     margin-bottom: 2.0rem;
     margin-top: 0;
 }
 
 h1 {
-    font-size: 3vw;
+    font-size: 3rem;
     line-height: 1.2;
 }
 
 h2 {
-    font-size: 2.7vw;
+    font-size: 2.7rem;
     line-height: 1.25;
 }
 
 h3 {
-    font-size: 2.4vw;
+    font-size: 2.4rem;
     line-height: 1.3;
 }
 
 h4 {
-    font-size: 2.1vw;
+    font-size: 2.1rem;
     letter-spacing: -.08rem;
     line-height: 1.35;
 }
 
 h5 {
-    font-size: 1.8vw;
+    font-size: 1.8rem;
     letter-spacing: -.05rem;
     line-height: 1.5;
 }
 
 h6 {
-    font-size: 1.5vw;
+    font-size: 1.5rem;
     letter-spacing: 0;
     line-height: 1.4;
 }
