--- a/src/LikeAFoxAspNg.Web/ClientApp/src/app/shared/components/sub-menu/sub-menu.component.html
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/app/shared/components/sub-menu/sub-menu.component.html
@@ -1,4 +1,6 @@
-
-  <div class="submenu-blocks" *ngFor="let menu of menus">
-    <a routerLinkActive="active" routerLink="{{menu.route}}">{{menu.text}}</a>
-  </div>
+ <div class="submenu-group">
+    <div class="submenu-blocks" *ngFor="let menu of menus">
+      <a routerLinkActive="active" routerLink="{{menu.route}}">{{menu.text}}</a>
+    </div>
+ </div>
+ 
