--- a/src/LikeAFoxAspNg.Web/ClientApp/src/styles/_Button.scss
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/styles/_Button.scss
@@ -7,9 +7,7 @@ input[type='reset'],
 input[type='submit'] {
     cursor: pointer;
     display: inline-block;
-    font-size: 1.1vw;
-    font-weight: 700;
-    letter-spacing: .1rem;
+    font-size: 18px;
     text-align: center;
     text-decoration: none;
     white-space: nowrap;
