--- a/src/LikeAFoxAspNg.Web/ClientApp/src/app/+signalr/signalr.component.html
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/app/+signalr/signalr.component.html
@@ -1,11 +1,11 @@
+<div [@routerTransition]="getState(o)">
+    <router-outlet #o="outlet"></router-outlet>
+</div>
 
+<div class="signalr-nav">
 
-<div class="right-signalr">
-        
-    <h1 class="signalr-title">SignalR demos</h1>
-        <appc-sub-menu [menus]="menus"></appc-sub-menu>
-        
-        <div [@routerTransition]="getState(o)">
-            <router-outlet #o="outlet"></router-outlet>
-        </div>
+    <div class="signalr-title" (click)="subCollapse()" [class.isSubCollapsed]="">
+            SignalR demos
+</div>
+    <appc-sub-menu (click)="subCollapse()" [class.isSubCollapsed]="isSubCollapsed" [menus]="menus" class="signlr-sub"></appc-sub-menu>
 </div>
