--- a/src/LikeAFoxAspNg.Web/ClientApp/src/app/shared/components/sub-menu/sub-menu.component.scss
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/app/shared/components/sub-menu/sub-menu.component.scss
@@ -1,36 +1,65 @@
-ul {
-    display: flex;
-    li {
-      display: inline-block;
-      list-style: none;  
-      text-decoration: none;
-    }
+.submenu-group {
+    width: 490px;
+    height: 60px;
+    position: fixed;
+    top: 0;
+    left: 60px;
 }
 
 .submenu-blocks a {
-    color: unset;
-    text-decoration-color: unset;
+    text-decoration-color: none;
     display: block;
-    height: 100%;
-    width: 100%;
+    float: right;
+    clear: both;
+    height: 60px;
     text-align: center;
-    line-height: 4vw; 
+    width: 100%;
+    color: #a68080;
+    line-height: 60px; 
+}
+.submenu-blocks:hover a {
+    color: #313b47;
 }
 .submenu-blocks {
+    text-decoration: none;
     display:block;
-    float:right;
-    height: 4vw;
-    font-size: 1.6vw;
-    line-height: 4vw;
+    height: 60px;
+    font-size: 18px;
+    line-height: 60px;
     text-align: center;
-    color: #313b47;
-    margin-right:1vw;
-    margin-top: 1vw;
-    width: 12vw;
-    background: #c0c8d1;
+    float: left;
+    background: #313b47;
+    width: 50%;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
 }
 
 .submenu-blocks:hover {
-    background: #313b47;
-    color: #a68080;
+    background: #a68080;
+}
+@media (max-width: 680px){
+    .submenu-group {
+        top: 60px;
+        width: 100%;
+        left: 0;
+    }
+    .submenu-blocks a {
+        color: #313b47;
+    }
+    .submenu-blocks:hover a {
+        color: #a68080;
+    }
+    .submenu-blocks {
+        background: #a68080;
+    }
+    .submenu-blocks:hover {
+        background: #313b47;
+    }
 }
